--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,14 +3,15 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "react-scripts": "5.0.1",
     "axios": "^1.7.9",
     "bootstrap": "^5.3.3",
+    "react": "^19.0.0",
     "react-bootstrap": "^2.10.7",
+    "react-cookie": "^7.2.2",
+    "react-dom": "^19.0.0",
     "react-icons": "^5.4.0",
     "react-router-dom": "^7.1.3",
+    "react-scripts": "5.0.1",
     "react-toastify": "^11.0.3"
   },
   "scripts": {
