--- a/api/Pipfile
+++ b/api/Pipfile
@@ -10,6 +10,7 @@ psycopg2-binary = "*"
 python-dotenv = "*"
 djoser = "*"
 django-cors-headers = "*"
+django-oauth-toolkit = "*"
 
 [dev-packages]
 
