added profile avatar

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,6 +21,8 @@ services:
       - ./api/.env.local
     volumes:
       - ./api:/code/
+      - ./api/media:/code/media
+
     ports:
       - '8000:8000'
     depends_on:
